@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
 #
 
+2004-11-30 22:21:19 GMT	John Goerzen <jgoerzen@complete.org>	patch-135
+
+    Summary:
+      Checkpointing docs
+    Revision:
+      missingh--head--0.5--patch-135
+
+
+    modified files:
+     ChangeLog libsrc/MissingH/ConfigParser.hs
+
+
 2004-11-30 21:58:43 GMT	John Goerzen <jgoerzen@complete.org>	patch-134
 
     Summary:
